--- a/server/src/population/dataFiles/disease-data.json
+++ b/server/src/population/dataFiles/disease-data.json
@@ -2100,7 +2100,7 @@
    "Share": 12.74
  },
  {
-   "Country": "DR Congo",
+   "Country": "DR Republic of the Congo",
    "Year": null,
    "Rabies": null,
    "Malaria": null,
@@ -3087,140 +3087,140 @@
    "Share": 3.06
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2000,
    "Rabies": 183,
    "Malaria": 339.93,
    "Share": 78.76
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2001,
    "Rabies": 192,
    "Malaria": 328.42,
    "Share": 78.19
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2002,
    "Rabies": 207,
    "Malaria": 302.45,
    "Share": 77.25
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2003,
    "Rabies": 225,
    "Malaria": 283.71,
    "Share": 76.15
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2004,
    "Rabies": 243,
    "Malaria": 267.1,
    "Share": 75.2
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2005,
    "Rabies": 259,
    "Malaria": 248.38,
    "Share": 74.42
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2006,
    "Rabies": 273,
    "Malaria": 226.71,
    "Share": 73.07
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2007,
    "Rabies": 287,
    "Malaria": 198.63,
    "Share": 71.62
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2008,
    "Rabies": 301,
    "Malaria": 171.07,
    "Share": 70.55
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2009,
    "Rabies": 313,
    "Malaria": 151.1,
    "Share": 69.21
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2010,
    "Rabies": 323,
    "Malaria": 137.37,
    "Share": 68.21
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2011,
    "Rabies": 329,
    "Malaria": 127.43,
    "Share": 67.09
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2012,
    "Rabies": 332,
    "Malaria": 124.64,
    "Share": 65.43
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2013,
    "Rabies": 333,
    "Malaria": 134.52,
    "Share": 63.8
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2014,
    "Rabies": 334,
    "Malaria": 144.91,
    "Share": 63.25
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2015,
    "Rabies": 335,
    "Malaria": 140.3,
    "Share": 61.68
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2016,
    "Rabies": 336,
    "Malaria": 131.28,
    "Share": 60.74
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2017,
    "Rabies": 333,
    "Malaria": 123.57,
    "Share": 59.64
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2018,
    "Rabies": 324,
    "Malaria": 114.92,
    "Share": 58.24
  },
  {
-   "Country": "Tanzania",
+   "Country": "United Republic of Tanzania",
    "Year": 2019,
    "Rabies": 308,
    "Malaria": 111.84,
@@ -7147,7 +7147,7 @@
    "Share": 61.28
  },
  {
-   "Country": "Côte dIvoire",
+   "Country": "Ivory Coast",
    "Year": null,
    "Rabies": null,
    "Malaria": null,
@@ -11634,7 +11634,7 @@
    "Share": 21.68
  },
  {
-   "Country": "Czech Republic (Czechia)",
+   "Country": "Czech Republic",
    "Year": null,
    "Rabies": null,
    "Malaria": null,
@@ -13321,140 +13321,140 @@
    "Share": 43.64
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2000,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.43
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2001,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.58
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2002,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.55
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2003,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.52
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2004,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.13
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2005,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.68
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2006,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.4
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2007,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.13
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2008,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.68
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2009,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.85
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2010,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.87
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2011,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.03
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2012,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.63
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2013,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.97
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2014,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.86
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2015,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.78
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2016,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.76
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2017,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.64
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2018,
    "Rabies": 0,
    "Malaria": null,
    "Share": 3.55
  },
  {
-   "Country": "Serbia",
+   "Country": "Republic of Serbia",
    "Year": 2019,
    "Rabies": 0,
    "Malaria": null,
@@ -15708,140 +15708,140 @@
    "Share": 2.28
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2000,
    "Rabies": 1,
    "Malaria": 355.36,
    "Share": 68.9
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2001,
    "Rabies": 1,
    "Malaria": 351.28,
    "Share": 70.22
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2002,
    "Rabies": 1,
    "Malaria": 319.89,
    "Share": 69.68
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2003,
    "Rabies": 1,
    "Malaria": 314.46,
    "Share": 69.26
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2004,
    "Rabies": 1,
    "Malaria": 308.73,
    "Share": 68.46
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2005,
    "Rabies": 1,
    "Malaria": 287.13,
    "Share": 67.31
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2006,
    "Rabies": 1,
    "Malaria": 263.65,
    "Share": 66.36
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2007,
    "Rabies": 1,
    "Malaria": 241.41,
    "Share": 65.29
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2008,
    "Rabies": 1,
    "Malaria": 219.02,
    "Share": 63.97
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2009,
    "Rabies": 1,
    "Malaria": 206.19,
    "Share": 62.44
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2010,
    "Rabies": 1,
    "Malaria": 201.13,
    "Share": 61.9
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2011,
    "Rabies": 1,
    "Malaria": 198.48,
    "Share": 61.1
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2012,
    "Rabies": 1,
    "Malaria": 195.69,
    "Share": 59.05
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2013,
    "Rabies": 1,
    "Malaria": 193.95,
    "Share": 58.58
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2014,
    "Rabies": 1,
    "Malaria": 186.5,
    "Share": 57.45
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2015,
    "Rabies": 1,
    "Malaria": 184.01,
    "Share": 56.02
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2016,
    "Rabies": 1,
    "Malaria": 190.02,
    "Share": 54.16
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2017,
    "Rabies": 1,
    "Malaria": 205.84,
    "Share": 52.8
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2018,
    "Rabies": 1,
    "Malaria": 217.63,
    "Share": 51.28
  },
  {
-   "Country": "Congo",
+   "Country": "Republic of the Congo",
    "Year": 2019,
    "Rabies": 1,
    "Malaria": 215.92,
@@ -19915,140 +19915,140 @@
    "Share": 62.12
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2000,
    "Rabies": 0,
    "Malaria": null,
    "Share": 7.27
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2001,
    "Rabies": 0,
    "Malaria": null,
    "Share": 6.79
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2002,
    "Rabies": 0,
    "Malaria": null,
    "Share": 6.43
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2003,
    "Rabies": 0,
    "Malaria": null,
    "Share": 6.63
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2004,
    "Rabies": 0,
    "Malaria": null,
    "Share": 6.34
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2005,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.86
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2006,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.9
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2007,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.57
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2008,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.54
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2009,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.57
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2010,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.05
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2011,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.98
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2012,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.21
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2013,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.29
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2014,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.21
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2015,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.03
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2016,
    "Rabies": 0,
    "Malaria": null,
    "Share": 5.36
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2017,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.86
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2018,
    "Rabies": 0,
    "Malaria": null,
    "Share": 4.66
  },
  {
-   "Country": "North Macedonia",
+   "Country": "Macedonia",
    "Year": 2019,
    "Rabies": 0,
    "Malaria": null,
@@ -20195,140 +20195,140 @@
    "Share": 3.44
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2000,
    "Rabies": 9,
    "Malaria": 399.45,
    "Share": 73.18
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2001,
    "Rabies": 9,
    "Malaria": 330.87,
    "Share": 72.5
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2002,
    "Rabies": 9,
    "Malaria": 260.89,
    "Share": 72.03
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2003,
    "Rabies": 9,
    "Malaria": 192.07,
    "Share": 71.43
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2004,
    "Rabies": 9,
    "Malaria": 127.46,
    "Share": 70.77
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2005,
    "Rabies": 9,
    "Malaria": 94.83,
    "Share": 71.41
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2006,
    "Rabies": 9,
    "Malaria": 77.35,
    "Share": 69.71
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2007,
    "Rabies": 9,
    "Malaria": 75.47,
    "Share": 67.35
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2008,
    "Rabies": 9,
    "Malaria": 88.4,
    "Share": 67.03
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2009,
    "Rabies": 9,
    "Malaria": 107.59,
    "Share": 65.64
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2010,
    "Rabies": 10,
    "Malaria": 124.63,
    "Share": 64.98
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2011,
    "Rabies": 10,
    "Malaria": 127.89,
    "Share": 64.46
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2012,
    "Rabies": 9,
    "Malaria": 121.29,
    "Share": 64.27
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2013,
    "Rabies": 9,
    "Malaria": 111.83,
    "Share": 63.1
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2014,
    "Rabies": 9,
    "Malaria": 95.04,
    "Share": 62.08
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2015,
    "Rabies": 9,
    "Malaria": 78.49,
    "Share": 61.53
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2016,
    "Rabies": 9,
    "Malaria": 65.64,
    "Share": 60.06
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2017,
    "Rabies": 9,
    "Malaria": 57.11,
    "Share": 59.26
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2018,
    "Rabies": 9,
    "Malaria": 56.74,
    "Share": 59.06
  },
  {
-   "Country": "Guinea-Bissau",
+   "Country": "Guinea Bissau",
    "Year": 2019,
    "Rabies": 8,
    "Malaria": 63.46,
