--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@next/font": "13.1.6",
     "axios": "^1.3.3",
     "d3": "^7.8.2",
+    "d3-scale": "^4.0.2",
     "datamaps": "^0.5.9",
     "next": "13.1.6",
     "react": "18.2.0",
