--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,11 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "axios": "^1.3.3",
-    "d3": "^7.8.2",
-    "datamaps": "^0.5.9",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-maps": "^3.0.0",
-    "react-tooltip": "^5.8.3",
-    "topojson": "^3.0.2"
+    "react-tooltip": "^5.8.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
