--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.12",
     "@next/font": "13.1.6",
     "axios": "^1.3.3",
     "d3": "^7.8.2",
     "datamaps": "^0.5.9",
     "next": "13.1.6",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simple-maps": "^3.0.0",
