--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,11 +1,6 @@
 {
-  "singleQuote": true,
-  "printWidth": 200,
-  "proseWrap": "always",
-  "tabWidth": 2,
-  "useTabs": false,
   "trailingComma": "none",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "semi": true
+  "tabWidth": 2,
+  "semi": true,
+  "singleQuote": true
 }
