Standardized country names in all data files with country names of heatmap

--- a/server/src/population/dataFiles/disease-data.json
+++ b/server/src/population/dataFiles/disease-data.json
@@ -2100,7 +2100,7 @@
     "Share": "12.74"
   },
   {
-    "Country": "DR Republic of the Congo",
+    "Country": "Democratic Republic of the Congo",
     "Year": null,
     "Rabies": null,
     "Malaria": null,
@@ -21035,7 +21035,7 @@
     "Share": "3.85"
   },
   {
-    "Country": "Timor-Leste",
+    "Country": "East Timor",
     "Year": null,
     "Rabies": null,
     "Malaria": null,
@@ -21182,140 +21182,140 @@
     "Share": "8.71"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2000,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.96"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2001,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.77"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2002,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.61"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2003,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.5"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2004,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.38"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2005,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.28"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2006,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.18"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2007,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.08"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2008,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.05"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2009,
     "Rabies": 0,
     "Malaria": null,
     "Share": "4.02"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2010,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.98"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2011,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.94"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2012,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.93"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2013,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.84"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2014,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.84"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2015,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.86"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2016,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.85"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2017,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.8"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2018,
     "Rabies": 0,
     "Malaria": null,
     "Share": "3.72"
   },
   {
-    "Country": "Cyprus",
+    "Country": "Northern Cyprus",
     "Year": 2019,
     "Rabies": 0,
     "Malaria": null,
@@ -23324,140 +23324,140 @@
     "Share": "18.49"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2000,
     "Rabies": 0,
     "Malaria": null,
     "Share": "24.39"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2001,
     "Rabies": 0,
     "Malaria": null,
     "Share": "24.26"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2002,
     "Rabies": 0,
     "Malaria": null,
     "Share": "22.6"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2003,
     "Rabies": 0,
     "Malaria": null,
     "Share": "21.77"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2004,
     "Rabies": 0,
     "Malaria": null,
     "Share": "21.39"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2005,
     "Rabies": 0,
     "Malaria": null,
     "Share": "19.58"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2006,
     "Rabies": 0,
     "Malaria": null,
     "Share": "19.7"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2007,
     "Rabies": 0,
     "Malaria": null,
     "Share": "17.64"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2008,
     "Rabies": 0,
     "Malaria": null,
     "Share": "16.87"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2009,
     "Rabies": 0,
     "Malaria": null,
     "Share": "16.29"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2010,
     "Rabies": 0,
     "Malaria": null,
     "Share": "15.29"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2011,
     "Rabies": 0,
     "Malaria": null,
     "Share": "14.81"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2012,
     "Rabies": 0,
     "Malaria": null,
     "Share": "14.54"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2013,
     "Rabies": 0,
     "Malaria": null,
     "Share": "14.13"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2014,
     "Rabies": 0,
     "Malaria": null,
     "Share": "14.02"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2015,
     "Rabies": 0,
     "Malaria": null,
     "Share": "13.52"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2016,
     "Rabies": 0,
     "Malaria": null,
     "Share": "13.45"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2017,
     "Rabies": 0,
     "Malaria": null,
     "Share": "13.18"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2018,
     "Rabies": 0,
     "Malaria": null,
     "Share": "12.9"
   },
   {
-    "Country": "Bahamas",
+    "Country": "The Bahamas",
     "Year": 2019,
     "Rabies": 0,
     "Malaria": null,
